--- a/index.html
+++ b/index.html
@@ -2,11 +2,22 @@
 <html>
 <head>
     <title>N/somnia Technologies</title>
-    
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
 </head>
 
 <body>
+    <div class="backgroundImage">
+        <img id="digitalBanner" src="C:\Users\tyson\OneDrive\Pictures\binay2.jpg" height="100%" width="100%" />
+    </div>
     <div id="title-banner">
+        <div class="logo">
+            <img src="C:\Users\tyson\OneDrive\Pictures\623.jpg" width="220px" height="180px" alt="N/somnia logo"/>
+        </div>
+        <div class="search-bar">
+            <label for="mainSearch">Search: </label>
+              <input type="text" value="" id="mainSearch">
+        </div>
         <div class="banner">
             <h1>N/somnia Technologies</h1>
             <h2>Ditial Development & Design</h2>        
@@ -17,6 +28,11 @@
             <a href="https://github.com/Brandon3943" target="_blank">GitHub</a>
         </div>
     </div>    
+
+    <div id="main">
+        
+
+    </div>
 
 
 
