updated webpage layout

--- a/index.html
+++ b/index.html
@@ -4,37 +4,66 @@
     <title>N/somnia Technologies</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
+    <script src="index.js" defer></script>
 </head>
 
 <body>
     <div class="backgroundImage">
-        <img id="digitalBanner" src="C:\Users\tyson\OneDrive\Pictures\binay2.jpg" height="100%" width="100%" />
+        <img id="digitalBanner" src="C:\Users\tyson\OneDrive\Pictures\dataimg.jpg" height="100%" width="100%" />
     </div>
+
     <div id="title-banner">
         <div class="logo">
-            <img src="C:\Users\tyson\OneDrive\Pictures\623.jpg" width="220px" height="180px" alt="N/somnia logo"/>
+            <img src="C:\Users\tyson\OneDrive\Pictures\623.jpg" id="nLogo" width="220px" height="180px" alt="N/somnia logo"/>
         </div>
-        <div class="search-bar">
+        <!-- <div class="search-bar">
             <label for="mainSearch">Search: </label>
               <input type="text" value="" id="mainSearch">
-        </div>
+        </div> -->
         <div class="banner">
             <h1>N/somnia Technologies</h1>
             <h2>Ditial Development & Design</h2>        
         </div>
         <div class="links">
             <a href="https://twitter.com/Nsomnia_Tech" target="_blank">Twitter</a>
-            <a href="https://www.instagram.com/nsomnia_tech/" target="_blank">Instagram</a>
+            <img src="C:\Users\tyson\OneDrive\Pictures\twitter1.png" id="img1" height="40px" width="40px"/>
+            <a href="https://www.instagram.com/brandondoesntcode/" target="_blank">Instagram</a>
+            <img src="C:\Users\tyson\OneDrive\Pictures\insta1.png" id="img2" height="30px" width="50px"/>
             <a href="https://github.com/Brandon3943" target="_blank">GitHub</a>
+            <img src="C:\Users\tyson\OneDrive\Pictures\githubwhite.png" id="img3" height="50px" width="50px"/>
         </div>
     </div>    
 
+    
+
     <div id="main">
+        <div id="backgroundColor"></div>
+      <!--  
+        <div class="openingSlide">
+            <p class="slide">Welcome, to</p>
+            <p class="slide">N/somnia</p>
+            <p class="slide">Technologies</p>
+        </div>   
+    -->
+        <img src="C:\Users\tyson\OneDrive\Pictures\bet1.jpg" id="betpic" height="300px" width="220px"/>
+
+        <p>Hello, and welcome to N/somnia! CEO, <a href='' target='_blank'>Brandon Tyson</a>, is a new software development student, whom is 
+        pursuing a new career. Please follow along with us while we learn together, and I can help new students follow and gain intrest in 
+        software development!</p>
         
-
+        <aside>Please note this is a test website, with many updates coming!</aside>
     </div>
-
-
+   
+    <!--
+    <div class="servies">
+        <ul class="servicesList">
+            <li class="list">Web Design</li>
+            <li class="list">Tutoring</li>
+            <li class="list">Resume' reviews</li>
+            <li class="list">Social Media Followers Code</li>
+        </ul>
+    </div>
+    -->
 
 
 
